# d-api

./: .env.example  .gitignore  API.md  README.md  main.py  pyproject.toml
app/api/: router.py
app/api/endpoints/: health.py  lyrics.py  spotify.py
app/core/: config.py
app/db/: base_class.py  dependencies.py  session.py
app/services/: lyrics.py  spotify.py
